Convertito Spells_Data da txt a XMl e installata la libreria per il parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,15 @@ project(SDL2_2DPlatformer)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# Trova le librerie SDL2
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 
-include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS})
+# Aggiungi le cartelle di inclusione per SDL2, pugixml e le altre librerie
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} /usr/include)
 
+# Aggiungi l'eseguibile
 add_executable(SDL2_2DPlatformer main.cpp
         src/Game_Engine.cpp
         src/Game_Engine.h
@@ -22,5 +25,5 @@ add_executable(SDL2_2DPlatformer main.cpp
         src/Item.h
 )
 
-target_link_libraries(SDL2_2DPlatformer ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL_TTF_LIBRARIES} SDL2_image SDL2_ttf)
-
+# Collega le librerie necessarie
+target_link_libraries(SDL2_2DPlatformer ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} pugixml SDL2_image SDL2_ttf)
